Bug 974007 - Change OMTC behavior when browser.tabs.remote is set (r=mattwoodrow,felipe)